[gd_scene load_steps=22 format=2]

[ext_resource path="res://TopDownShootGame/Common/Explosive.tscn" type="PackedScene" id=1]
[ext_resource path="res://TopDownShootGame/AI/Action/AttackTarget.gd" type="Script" id=2]
[ext_resource path="res://NixLib/Common/Effect2DGenerator.gd" type="Script" id=3]
[ext_resource path="res://NixLib/Common/UnitLife.gd" type="Script" id=4]
[ext_resource path="res://TopDownShootGame/Image/Turrent/specialBarrel3_outline.png" type="Texture" id=5]
[ext_resource path="res://TopDownShootGame/AI/Action/ApprochTarget.gd" type="Script" id=6]
[ext_resource path="res://TopDownShootGame/AI/Condition/EnemyTooClose.gd" type="Script" id=7]
[ext_resource path="res://TopDownShootGame/AI/Condition/EnemyInView.gd" type="Script" id=8]
[ext_resource path="res://NixLib/Common/Sight.gd" type="Script" id=9]
[ext_resource path="res://NixLib/BehaviorTree/BehaviorTree/BT_Parallel.gd" type="Script" id=10]
[ext_resource path="res://TopDownShootGame/Common/MovementAgent.gd" type="Script" id=11]
[ext_resource path="res://NixLib/Shoot/ShootTarget.gd" type="Script" id=12]
[ext_resource path="res://TopDownShootGame/Mecha/EnemyMechAI.gd" type="Script" id=13]
[ext_resource path="res://TopDownShootGame/Mecha/MechaEnemy.gd" type="Script" id=14]
[ext_resource path="res://TopDownShootGame/AI/Action/Flee.gd" type="Script" id=15]
[ext_resource path="res://NixLib/BehaviorTree/BehaviorTree/BehaviorTreeRoot.gd" type="Script" id=16]
[ext_resource path="res://NixLib/BehaviorTree/BehaviorTree/BT_Selector.gd" type="Script" id=17]
[ext_resource path="res://NixLib/BehaviorTree/BehaviorTree/BehaviorLeaf.gd" type="Script" id=18]
[ext_resource path="res://TopDownShootGame/Projectile/bullet0.tscn" type="PackedScene" id=19]
[ext_resource path="res://TopDownShootGame/Image/Unit/Huge/tankBody_dark_outline.png" type="Texture" id=20]


[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18.0235, 19.884 )

[node name="Mecha" type="KinematicBody2D"]
collision_layer = 3
script = ExtResource( 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Huge" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 20 )

[node name="ShootTarget" type="Node2D" parent="."]
script = ExtResource( 12 )
projectile = ExtResource( 19 )
fires = [ NodePath("Fire") ]

[node name="Fire" type="Node2D" parent="ShootTarget"]
position = Vector2( 24, -0.000107193 )
rotation = -4.46638e-06

[node name="turret" type="Sprite" parent="ShootTarget"]
position = Vector2( 8, -3.5731e-05 )
rotation = -1.5708
texture = ExtResource( 5 )

[node name="UnitLife" type="Node" parent="."]
script = ExtResource( 4 )
maxLife = 14

[node name="ViewRange2D" type="Area2D" parent="."]
script = ExtResource( 9 )
distance = 256.0

[node name="Effect2DGenerator" type="Node2D" parent="."]
script = ExtResource( 3 )
efx = ExtResource( 1 )

[node name="MovementAgent" type="Node" parent="."]
script = ExtResource( 11 )

[node name="EnemyMechAI" type="Node" parent="."]
script = ExtResource( 13 )

[node name="BehaviorTreeRoot" type="Node" parent="EnemyMechAI"]
script = ExtResource( 16 )

[node name="BT_Selector" type="Node" parent="EnemyMechAI/BehaviorTreeRoot"]
script = ExtResource( 17 )

[node name="Flee" type="Node" parent="EnemyMechAI/BehaviorTreeRoot/BT_Selector"]
script = ExtResource( 18 )
conditionScript = ExtResource( 7 )
actionScript = ExtResource( 15 )

[node name="BT_Parallel" type="Node" parent="EnemyMechAI/BehaviorTreeRoot/BT_Selector"]
script = ExtResource( 10 )
condition = ExtResource( 8 )

[node name="Approch" type="Node" parent="EnemyMechAI/BehaviorTreeRoot/BT_Selector/BT_Parallel"]
script = ExtResource( 18 )
conditionScript = ExtResource( 8 )
actionScript = ExtResource( 6 )

[node name="Attack" type="Node" parent="EnemyMechAI/BehaviorTreeRoot/BT_Selector/BT_Parallel"]
script = ExtResource( 18 )
actionScript = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
autostart = true
[connection signal="body_entered" from="ViewRange2D" to="ViewRange2D" method="_on_ViewRange2D_body_entered"]
[connection signal="body_exited" from="ViewRange2D" to="ViewRange2D" method="_on_ViewRange2D_body_exited"]
[connection signal="timeout" from="Timer" to="EnemyMechAI" method="Run"]
